--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <header class="main-header glass-card">
     <div class="logo-container">
-        <a href="/" class="logo-text">Rank<span class="highlight">Saarthi</span></a>
+        <a href="/" class="logo-link">
+            <img src="/images/logo.svg" alt="RankSaarthi Logo" class="logo-img">
+        </a>
     </div>
     <nav class="main-nav">
         <!-- Future links: Calculators, Rank Predictor, Blog -->
